# ccpp-vscode-boilerplate

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/c/: hello.c  hello.h  main.c
src/cpp/: hello.cpp  hello.hpp  main.cpp
